--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script type="text/javascript" src="js/menu.js"></script>
 
     <title>Prof. Wilsón F. Mutis</title>
+    
+    <meta name="google-site-verification" content="aoavOsJM9GKkE-JNmV6Cc5USNy_5ku0BPRrW9HCx3dU" />
+    
   </head>
   <body>
     <!-- Encabezado -->
