--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="index.html">Inicio</a>
           <a href="cursos.html">Cursos</a>
           <a href="trabajos-de-grado.html">Trabajos de grado</a>
-          <a href="blog.html">Blog</a>
+          <a href="blog.html">Eventos</a>
           <a href="articulos.html">Artículos</a>
           <a href="altenua-eventos.html">ALTENUA - EVENTOS</a>
         </nav>
