--- a/trabajos-de-grado.html
+++ b/trabajos-de-grado.html
@@ -114,16 +114,16 @@
     <!-- Pie de página -->
     <footer>
        <div class="top-footer"></div>
-       <div class="center-footer">
+        <div class="center-footer">
          <div class="contenedor">
            <div class="widget">
-            <a href="https://www.facebook.com/"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="https://www.facebook.com/wilson.mutis"><img src="img/facebook.png" alt="Facebook"></a>
            </div>
            <div class="widget">
-             <a href="https://www.instagram.com"><img src="img/instagram1.png" alt="Facebook"></a>
+             <a href="https://www.instagram.com/wilson.mutis/"><img src="img/instagram1.png" alt="Instagram"></a>
            </div>
            <div class="widget">
-             <a href="https://www.youtube.com"><img src="img/youtube1.jpg" alt="Facebook"></a>
+             <a href="https://www.youtube.com/channel/UCEkyFXAnZTtBVJt6pa7lJ1A"><img src="img/youtube1.jpg" alt="Youtube"></a>
            </div>
          </div>
        </div>
