--- a/cursos.html
+++ b/cursos.html
@@ -93,6 +93,7 @@
                 <li><a href="https://www.youtube.com/watch?v=htF3Ki3E5pE&feature=youtu.be" target="_blank">Propiedades de las matrices invertibles</a> </li>
                 <li><a href="https://www.youtube.com/watch?v=WxBn_9LsqRY&feature=youtu.be" target="_blank">Cálculo de la inversa de una matriz invertible</a> </li>
                 <li><a href="https://www.youtube.com/watch?v=eKzqERTjwew&feature=youtu.be" target="_blank">Ejemplos de matrices invertibles</a> </li>
+                <li><a href="https://www.youtube.com/watch?v=RFR6zYdppbM&feature=youtu.be" target="_blank">Factorización LU</a> </li>
               </ol>
           </div>
           <h3>GEOMETRÍA EUCLIDIANA</h3>
